k8s-deployment-project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-animation-service
  labels:
    app: heart-animation
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: heart-animation
